# project_momos

./: .gitignore  CMakeLists.txt  README.md  project  pyproject.toml  setup.cfg  setup.py  test.sh  tox.ini
.github/workflows/: python-package.yml
analyzer/: index.html
analyzer/js/: config.js  index.js
doc/: concept.md  graphs.drawio
examples/basic/: CMakeLists.txt  test.sh
examples/basic/inc/: hal.h  logic.h  messages.h  states.h
examples/basic/src/: hal.c  logic.c  main.c  messages.c  states.c
examples/basic/test/: base_states.cpp  main.cpp  test_states.cpp
examples/basic/test/mocks/: hal_mock.cpp  hal_mock.hpp
inc/: states.h
momos/: CMakeLists.txt  cli.py  config.yaml  generator.py  graph.py  parser.cpp  steps.hpp  suite.py  utils.py
momos/components/: __init__.py  action.py  basic.py  mode.py  trigger.py
momos/inspector/: index.html
momos/inspector/css/: graph.css  index.css
momos/inspector/js/: config.js  index.js
momos/libraries/gtest/: builder.hpp  momos.hpp
momos/libraries/gtest/momos/: io.cpp  io.hpp  macros.hpp
momos/parser/: __init__.py  grammar.lark  parse.py
momos/templates/gtest/: actions.j2  processors.j2  suite.j2
src/: hal.c  logic.c  main.c
test/: test_messages.cpp
test/mocks/: hal_mock.cpp
test/momos/: base_config.hpp  testif.hpp
tests/: test_cli.py  test_generator.py  test_mode.py  test_parse.py  test_suite.py  test_utils.py
tools/: convert.sh  parser.py  scan.py  setup.cfg  state.dot
tools/momos/: __main__.py  generator.py  graph.py
tools/momos/components/: __init__.py  basic.py
tools/momos/parser/: grammar.lark  parse.py
tools/momos/templates/gtest/: suite.j2
