[tool.poetry]
name = "momos"
version = "1.0.1"
description = "Test framework for protocol implementations"
readme = "README.md"
authors = ["codetent <christophsw@gmail.com>"]
license = "MIT"
packages = [
    { include = "momos" },
]
include = [
    "README.md",
    ".lark",
    "doc/momos_header.svg",
    "libraries/*/*/*",
    "templates/*/*"
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
comment_parser = "^1.2.3"
Jinja2 = "^2.11.2"
lark_parser = "^0.11.1"
click = "^7.1.2"
networkx = "^2.5"
pydot = "^1.4.1"
case_converter = "^1.0.2"
lark = "^0.11.1"
wrapt = "^1.12.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pyshould = "^0.7.1"
flake8 = "^3.8.4"
flake8-bugbear = "^20.11.1"
flake8-import-order = "^0.18.1"
pep8-naming = "^0.11.1"
yapf = "^0.31.0"

[tool.poetry.scripts]
momos = 'momos.cli:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
